added subprojects; moved output data to external file